# hackerrank

./: .gitignore  README.md
algorithms/strings/palindrome/: CMakeLists.txt  main.cpp
algorithms/warmup/a-very-big-sum/: CMakeLists.txt  main.cpp
algorithms/warmup/diagonal-difference/: CMakeLists.txt  main.cpp
algorithms/warmup/mini-max-sum/: .gitignore  README.md  xmake.lua
algorithms/warmup/mini-max-sum/src/: main.cpp
algorithms/warmup/plus-minus/: CMakeLists.txt  main.cpp
algorithms/warmup/simple-array-sum/: CMakeLists.txt  main.cpp
algorithms/warmup/solve-me-first/: CMakeLists.txt  main.cpp
algorithms/warmup/staircase/: CMakeLists.txt  main.cpp
algorithms/warmup/time-conversion/: CMakeLists.txt  main.cpp
