cmake_minimum_required(VERSION 3.5)
project(simple_array_sum)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Test" CACHE STRING "" FORCE)
set(CMAKE_C_FLAGS_TEST "-DTEST" CACHE STRING "" FORCE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(../../../inc)
add_definitions(-DCATCH_CONFIG_MAIN)
set(SOURCE_FILES main.cpp)
add_executable(simple_array_sum ${SOURCE_FILES})
